# probabilistic_robotics_2017_18

./: .gitignore  README.md
applications/cpp/16_thin_localizer/: README.md
applications/cpp/16_thin_localizer/src/: thin_localizer_node.cpp
applications/cpp/17b_autodiff/: Readme.md
applications/cpp/24_projective_icp/: CMakeLists.txt  README.md
applications/cpp/24_projective_icp/executables/: CMakeLists.txt  camera_test.cpp  correspondence_finder_test.cpp  distance_map_test.cpp  picp_complete_test.cpp  picp_solver_test.cpp
applications/cpp/24_projective_icp/src/: defs.h  picp_solver.cpp  picp_solver.h  points_utils.cpp
applications/octave/04_grid_orazio/: README.md  getNextState.m  getObservations.m  getRobotPosition.m  grid_orazio.m  observationModel.m  transitionModel.m
applications/octave/08_ekf_localization/: README.md
applications/octave/09_ekf_localization_bearing_only/: README.md
applications/octave/10_ekf_slam/: README.md  correction.m  ekf_slam.m  prediction.m
applications/octave/12_ekf_slam_unknown_association/: data_association.m  ekf_slam.m
applications/octave/14_ukf_localization/: compute_sigma_points.m
applications/octave/16_particle_localization/: PFLocalization.m
applications/octave/19_odometry_calibration/: LSOdomCalib.m  README.md
applications/octave/19_odometry_calibration/exercise/: ls_calibrate_odometry.m
applications/octave/19_odometry_calibration/solution/: ls_calibrate_odometry.m
applications/octave/19b_alignment_point_to_point_2d/: README.md
applications/octave/20_alignment_point_to_point_3d/: ICP_3D_test.m
applications/octave/20b_alignment_point_to_point_3d_linear_relaxation/: ICP_3D_test.m  README.md  icp_3d.m
applications/octave/25_multi_point_registration/: README.md
applications/octave/tools/utilities/: getMap.m
applications/octave/tools/visualization/: drawBelief.m  drawObservations.m
